tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NaquadahBasedFue-AAAAAAAAAAAAAAAAAAALlQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2965,
  "prerequisites": [
    2964
  ],
  "properties": {
    "auto_claim": false,
    "desc": "399 576 000 EU/t at 8s per liter. Sourcing the infinity dust and heavy radox might prove problematic until later.\n\nThe alternate recipe requires mellion & creon but you get 50% extra output for a little bit of transcendent metal.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Naquadah Based Fuel MkV",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2964
  ],
  "rewards": [],
  "tasks": []
}
