tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NaquadahBasedFue-KHL_yx4XTKOtsHHZ60ZZpg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2168286012512819622,
  "prerequisites": [
    2965
  ],
  "properties": {
    "auto_claim": false,
    "desc": "2 077 795 200 EU/t at 12s per liter. A truly immense amount of power, with a hefty cost. You will need a lot of infrastructure to run the refinery, but doing so will reward you with trillions of EU/t.\n\nThe astral titanium and celestial tungsten for alternate recipe can be sourced from laser engravers or the Plasma Fuel Line.\n\nThe tritanium can be sourced using fusion reactors, or by mining in the Deep Dark.\n\nThe shirabon will require an immense amount of fusion reactors and DTPFs to sustain.\n\nAfter Eye of Harmony, condensed raw stellar plasma can be used to improve the yield for even more power.\n\nYou will also want to consider the Tachyon Rich Temporal Fluid to get the most out of the Mark VI.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Naquadah Based Fuel MkVI",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2965
  ],
  "rewards": [],
  "tasks": []
}
