tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NaquadahFuelRefi-AAAAAAAAAAAAAAAAAAALjw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2959,
  "prerequisites": [
    2948
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This insane machine is used to make MkIII and higher tier naquadah fuel.\n\nIt can't be overclocked by increasing the input voltage. The only way to overclock it is to use higher tier coils.\n\nIt also supports §9Tec§1Tech§r's Multi-Amp energy hatches and laser hatches.\n\nExample: The MkIV fuel requires tier 2 coils and the refinery is using tier 3 coils. This gives a perfect overclock, using 4x power and 0.25x time.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Naquadah Fuel Refinery",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2948
  ],
  "rewards": [],
  "tasks": []
}
