tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__NuclearBasedFuel-AAAAAAAAAAAAAAAAAAALjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2956,
  "prerequisites": [
    2948
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Cheapest one, with 2,200EU/t output lasting 25s per mB.\n\nIt is also the source of praseodymium, which will be used for naquadah fuel.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nuclear Based Fuel (Th)",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2948
  ],
  "rewards": [],
  "tasks": []
}
