tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__ObscenelyDangero-AAAAAAAAAAAAAAAAAAAB6g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 490,
  "prerequisites": [
    198,
    1896
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For the truly insane mad scientists out there. Or people who can read a website (not guaranteed, trust me!). You HAVE to use coolant cells with it if you want power or to have it not explode after 1s.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Obscenely Dangerous Nuclear Fuel: The Core",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    198,
    1896
  ],
  "rewards": [],
  "tasks": []
}
