tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__PocketPlasmaEV-AAAAAAAAAAAAAAAAAAAK2w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2779,
  "prerequisites": [
    1212
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Assuming you don't want to set up something crazy every time you move your miners, you'll need some kind of SB to power them. This is one of the good options. You can just teleport the fuel instead.\n\n[note]You may note that the efficiency goes up rather than down as it goes up in tiers. Enjoy this small comfort, the multis are still way better.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pocket Plasma EV",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1212
  ],
  "rewards": [],
  "tasks": []
}
